--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@ Copyright (c) Geekofia 2020 and beyond
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="react_root"></div>
+    <div id="react_root">
+        <p> Lorem ipsum hetyp </p>
+    </div>
 </body>
 
 </html>
